# bracket-pool-simulator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bracket-optimizer-roadmap.md  pyproject.toml
.github/workflows/: ci.yml
config/: pools.example.toml
docs/: architecture.md  bracket-optimizer-roadmap.md  functionality.md  migration-roadmap.md  national_picks.md  phase2_validation.md  phase3_data_pipeline.md  roadmap.md
scripts/: check_legacy_parity.py
src/bracket_sim/: __init__.py
tests/: conftest.py
tests/expected/: bracket_lab_analysis_round_plus_seed_pool18.json  synthetic_64_seed99_n300.json
tests/fixtures/: bracket_lab_name_ratings.csv
tests/helpers/: mock_espn_payloads.py
tests/integration/: test_analyze_bracket_golden.py  test_bracket_lab_pipeline.py  test_end_to_end.py  test_golden_output.py  test_legacy_parity_script.py  test_prepare_data.py  test_refresh_data.py  test_refresh_national_picks.py  test_web_pipeline.py
tests/unit/: test_analyze_bracket.py  test_bracket_completion.py  test_bracket_graph.py  test_cache_keys.py  test_cli.py  test_constraints.py  test_espn_provider.py  test_generate_matchup_tables.py  test_generate_reports.py  test_kenpom_snapshot_configuration.py  test_models.py  test_optimize_bracket.py  test_path_defaults.py  test_prepare_bracket_lab_data.py  test_prepare_data_pipeline.py  test_probability_model.py  test_product_models.py  test_ratings_provider.py  test_scoring.py  test_simulate_pool.py  test_simulation_engine.py  test_tracker_viewing_guide.py  test_web_app.py  test_web_config.py  test_web_layout.py  (+2 more)
(+75 files in other folders)
